Fix finalization of track copy process.

... to media device collections.

Patch by Tommaso Falchi Delitala.

BUG:238912
REVIEW:101652